--- a/src/main/resources/application-test.yml
+++ b/src/main/resources/application-test.yml
@@ -9,3 +9,5 @@ spring:
 mybatis:
   mapper-locations: classpath:mybatis/mapper/*.xml
   config-location: classpath:mybatis/mybatis-config.xml
+swagger:
+    enable: true
