--- a/src/main/resources/application-test.yml
+++ b/src/main/resources/application-test.yml
@@ -1,11 +1,11 @@
 server:
-  port: 8083
+  port: 8085
 spring:
   datasource:
     driver-class-name: org.postgresql.Driver
     username: postgres
     password: root
-    url: jdbc:postgresql://192.144.233.112:5432/postgres
+    url: jdbc:postgresql://localhost:5432/postgres
 mybatis:
   mapper-locations: classpath:mybatis/mapper/*.xml
   config-location: classpath:mybatis/mybatis-config.xml
